Adds CORS middleware

--- a/.sample.conf
+++ b/.sample.conf
@@ -1,4 +1,9 @@
 {
   database_url = "postgresql+asyncpg://username:$3cR37_p4$5w0Rd@db:5432/poc-db" # change it
   secret_key = "4fa29817142d44a7893aaba614e5b5fb" # change it
+  cors = {
+      origins = [
+          "http://localhost:8000",  # change it
+      ]
+  }
 }
