Adds newrelic, alembic and entrypoint

--- a/.sample.env
+++ b/.sample.env
@@ -2,3 +2,4 @@ POSTGRES_PASSWORD=$3cR37_p4$5w0Rd
 POSTGRES_USER=username
 POSTGRES_DB=poc-db
 FASTAPI_ENV=local
+NEW_RELIC_LICENSE_KEY=0000000000000000000000000000000000000000
