--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ passlib = {version = "^1.7.4", extras = ["bcrypt"]}
 python-jose = {version = "^3.2.0", extras = ["cryptography"]}
 httpx = "^0.18.1"
 SQLAlchemy-Utils = "^0.37.5"
+newrelic = "^6.4.0"
+gunicorn = "^20.1.0"
+uvloop = "^0.15.2"
+httptools = "^0.2.0"
+alembic = "^1.6.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
