Implements list posts endpoint

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ exclude =
 [mypy]
 files=poc_fastapi,tests
 ignore_missing_imports=true
+plugins = pydantic.mypy
 
 [tool:pytest]
 addopts = --cov=. --cov-report=html --cov-fail-under=95
